# LzuOssHPC-2023

./: .gitignore  README.md
codes/compile_cmake/: CMakeLists.txt
codes/compile_cmake/inc/: particle.hpp  v3.hpp
codes/compile_cmake/src/: main.cpp
codes/compile_first_steps/: README.md  compile.sh
codes/compile_first_steps/step1/: hello.cpp
codes/compile_first_steps/step3/inc/: mixed_a.hpp  mixed_b.hpp
codes/compile_first_steps/step3/src/: mixed_a.cpp  mixed_b.cpp  mixed_main.cpp
codes/compile_makefile/: Makefile
codes/compile_makefile/src/: particle.cpp  v3.cpp
codes/upper_level_algorithm_opt/: .gitignore  README.md
codes/upper_level_algorithm_opt/inc/: read_data.hpp
codes/upper_level_algorithm_opt/src/: datagen.cpp  matrix_cal_cuda.cu  matrix_cal_general.cpp  matrix_cal_mpi.cpp  matrix_cal_mpi_cuda.cu  matrix_cal_mpi_openmp.cpp  matrix_cal_openblas.cpp  matrix_cal_openmp.cpp
problem-sets/: ai.md  first-of-all.md  ops.md  sci-1.md  sci-2.md  sci-3.md  sci-4.md
